--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@ button:hover {
 
 /* Progress bar styles */
 .progress-bar {
-  background-color: #f1f1f1;
+  background-color: #ff0000;
   border-radius: 4px;
   overflow: hidden;
 }
